--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include("header") %>
 <div id="instructionstitle">
-    <h1> Welcome to the final task of Mars Rover Manipal Automation and Artificial Taskphase 2021!  </h1>
+    <h1> Welcome to the final task of Mars Rover Manipal Automation and AI Taskphase 2021!  </h1>
 </div>
 
 
