--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
        
 
 
-<div class="cards"">
+<div class="cards">
        <div class="row">
         <div class="card"  >
             <div class="card-body">
